--- a/GMX.cbp
+++ b/GMX.cbp
@@ -6,7 +6,7 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug">
+			<Target title="WinDebug">
 				<Option output="bin/Debug/GMX" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="0" />
@@ -15,9 +15,17 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D__WXDEBUG__" />
+					<Add directory="include/database" />
+					<Add directory="include/application" />
+					<Add directory="include/model" />
+					<Add directory="include/database/alphabeat" />
+					<Add directory="include/word" />
 				</Compiler>
+				<Linker>
+					<Add library="$(#wxtools.LIB)/libwxtoolsd.a" />
+				</Linker>
 			</Target>
-			<Target title="Release">
+			<Target title="WinRelease">
 				<Option output="bin/Release/GMX" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
@@ -25,9 +33,15 @@
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include/database" />
+					<Add directory="include/application" />
+					<Add directory="include/model" />
+					<Add directory="include/database/alphabeat" />
+					<Add directory="include/word" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="$(#wxtools.LIB)/libwxtools.a" />
 				</Linker>
 			</Target>
 			<Environment>
@@ -35,6 +49,8 @@
 				<Variable name="AURD" value="$(AU)$(RD)" />
 				<Variable name="LIB_VER" value="$(WX_VER1)$(WX_VER2)$(AURD)" />
 				<Variable name="RD" value="" />
+				<Variable name="SQLITE3" value="${WXSQLITE3}\sqlite3" />
+				<Variable name="WXSQLITE3" value="${DIR_LIB_WXSQLITE3}" />
 				<Variable name="WX_CFG" value="msw$(AURD)" />
 				<Variable name="WX_DIR" value="$(DIR_LIB_WXWIDGETS)" />
 				<Variable name="WX_GL_VER" value="GL" />
@@ -46,23 +62,35 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-std=c++11" />
 			<Add option="-pipe" />
 			<Add option="-mthreads" />
+			<Add option='[[if (PLATFORM == PLATFORM_MSW &amp;&amp; (GetCompilerFactory().GetCompilerVersionString(_T(&quot;gcc&quot;)) &gt;= _T(&quot;4.0.0&quot;))) print(_T(&quot;-Wno-attributes&quot;));]]' />
 			<Add option="-std=gnu++11" />
 			<Add option="-D__GNUWIN32__" />
 			<Add option="-D__WXMSW__" />
 			<Add option="-DwxUSE_UNICODE" />
-			<Add directory="$(WX_DIR)$(WX_VER1)$(WX_VER2)$(WX_VER3)$(WX_GL_VER)/include" />
-			<Add directory="$(WX_DIR)$(WX_VER1)$(WX_VER2)$(WX_VER3)$(WX_GL_VER)/include/contrib/include" />
-			<Add directory="$(WX_DIR)$(WX_VER1)$(WX_VER2)$(WX_VER3)$(WX_GL_VER)/lib/gcc_lib/mswu" />
+			<Add directory="$(#wx.INCLUDE)" />
+			<Add directory="$(#wx.INCLUDE)/contrib/include" />
+			<Add directory="$(#wx.LIB)/mswu" />
+			<Add directory="$(#sqlite3.INCLUDE)" />
+			<Add directory="$(#wxsqlite3.INCLUDE)" />
+			<Add directory="$(#wxtools.INCLUDE)" />
 			<Add directory="include" />
 			<Add directory="include/GUI" />
+			<Add directory="include/application" />
+			<Add directory="include/constants" />
+			<Add directory="include/database" />
+			<Add directory="include/model" />
+			<Add directory="include/word" />
 		</Compiler>
 		<ResourceCompiler>
-			<Add directory="$(WX_DIR)$(WX_VER1)$(WX_VER2)$(WX_VER3)$(WX_GL_VER)/include" />
+			<Add directory="$(#wx.INCLUDE)" />
 		</ResourceCompiler>
 		<Linker>
 			<Add option="-mthreads" />
+			<Add library="$(#wxsqlite3.LIB)/libwxcode_msw$(WX_VER1)$(WX_VER2)$(AURD)_wxsqlite3.a" />
+			<Add library="$(#sqlite3.LIB)/sqlite3.a" />
 			<Add library="libwxmsw$(LIB_VER)_core.a" />
 			<Add library="libwxbase$(LIB_VER)_xml.a" />
 			<Add library="libwxbase$(LIB_VER).a" />
@@ -71,6 +99,7 @@
 			<Add library="libwxpng$(RD).a" />
 			<Add library="libwxtiff$(RD).a" />
 			<Add library="libwxzlib$(RD).a" />
+			<Add library="libwxregex$(AURD).a" />
 			<Add library="libkernel32.a" />
 			<Add library="libuser32.a" />
 			<Add library="libgdi32.a" />
@@ -84,21 +113,56 @@
 			<Add library="libcomctl32.a" />
 			<Add library="libwsock32.a" />
 			<Add library="libodbc32.a" />
-			<Add library="${DIR_MINGW}/libshlwapi.a" />
-			<Add library="${DIR_MINGW}/libversion.a" />
-			<Add directory="$(WX_DIR)$(WX_VER1)$(WX_VER2)$(WX_VER3)$(WX_GL_VER)/lib/gcc_lib" />
+			<Add library="$(#mingw.LIB)/libshlwapi.a" />
+			<Add library="$(#mingw.LIB)/libversion.a" />
+			<Add directory="$(#wx.LIB)" />
+			<Add directory="$(#sqlite3.LIB)" />
+			<Add directory="$(#wxsqlite3.LIB)" />
+			<Add directory="$(#wxtools.LIB)" />
 		</Linker>
 		<Unit filename="GMXApp.cpp" />
 		<Unit filename="GMXApp.h" />
 		<Unit filename="include/GUI/AnalysisPanel.h" />
 		<Unit filename="include/GUI/GMXMain.h" />
 		<Unit filename="include/GUI/ThesaurusPanel.h" />
+		<Unit filename="include/application/Mediator.h" />
+		<Unit filename="include/constants/strings.h" />
+		<Unit filename="include/database/AlphabeatCreatingRequest.h" />
+		<Unit filename="include/database/DataBaseFactory.h" />
+		<Unit filename="include/database/DataBaseOpeningRequest_01.h" />
+		<Unit filename="include/database/DataBase_MetaData.h" />
+		<Unit filename="include/database/alphabeat/AlphabeatCreatingResponse.h" />
+		<Unit filename="include/database/alphabeat/AlphabeatReadingRequest.h" />
+		<Unit filename="include/database/alphabeat/AlphabeatReadingResponse.h" />
+		<Unit filename="include/model/Alphabeat.h" />
+		<Unit filename="include/model/Thesaurus.h" />
+		<Unit filename="include/model/ValuedLetter.h" />
+		<Unit filename="include/model/ValuedSet.h" />
+		<Unit filename="include/word/GuematricNumber.h" />
+		<Unit filename="include/word/LetterFinder.h" />
+		<Unit filename="include/word/WordAnalyzer.h" />
+		<Unit filename="include/word/WordManager.h" />
 		<Unit filename="resource.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
 		<Unit filename="src/GUI/AnalysisPanel.cpp" />
 		<Unit filename="src/GUI/GMXMain.cpp" />
 		<Unit filename="src/GUI/ThesaurusPanel.cpp" />
+		<Unit filename="src/application/Mediator.cpp" />
+		<Unit filename="src/database/AlphabeatCreatingRequest.cpp" />
+		<Unit filename="src/database/DataBaseFactory.cpp" />
+		<Unit filename="src/database/DataBaseOpeningRequest_01.cpp" />
+		<Unit filename="src/database/alphabeat/AlphabeatCreatingResponse.cpp" />
+		<Unit filename="src/database/alphabeat/AlphabeatReadingRequest.cpp" />
+		<Unit filename="src/database/alphabeat/AlphabeatReadingResponse.cpp" />
+		<Unit filename="src/model/Alphabeat.cpp" />
+		<Unit filename="src/model/Thesaurus.cpp" />
+		<Unit filename="src/model/ValuedLetter.cpp" />
+		<Unit filename="src/model/ValuedSet.cpp" />
+		<Unit filename="src/word/GuematricNumber.cpp" />
+		<Unit filename="src/word/LetterFinder.cpp" />
+		<Unit filename="src/word/WordAnalyzer.cpp" />
+		<Unit filename="src/word/WordManager.cpp" />
 		<Unit filename="wxsmith/AnalysisPanel.wxs" />
 		<Unit filename="wxsmith/GMXframe.wxs" />
 		<Unit filename="wxsmith/ThesaurusPanel.wxs" />
